--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_SERVER=your_server_name
-DB_NAME=your_database_name
-DB_USER=your_username
-DB_PASSWORD=your_password
+DB_SERVER=mechanics-server 
+DB_NAME=MechanicsDB
+DB_USER=Davekadima
+DB_PASSWORD=Saintdave60697
