--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_SERVER=mechanics-server
+DB_SERVER=mechanics-server.database.windows.net
 DB_NAME=MechanicsDB
 DB_USER=adminuser
 DB_PASSWORD=Saintdave60697
